removed hardcoded sample tweets from HTML

--- a/index.html
+++ b/index.html
@@ -19,45 +19,18 @@
           </a>
         </div>
 
-        <h1 class="current-view" data-stream="home">Home</h1>
+        <h1 class="current-view" data-stream="home">
+          Home
+        </h1>
 
       </nav>
     </header>
 
-    <div class="stream">
+    <section class="stream">
       <a class="row refresh-tweets hidden">See New Tweets</a>
 
-      <!-- Some fake data for testing CSS -->
-      <div class="tweets">
-
-        <div class="row tweet">
-          <img class="avatar" src="assets/avatar.png"></img>
-          <div class="content">
-            <span class="username">@shawndrost</span>
-            <span class="timestamp"> - 3h</span>
-            <div>
-              that wizard debugged an entire pony #yolo
-            </div>
-            <div class="share-icons">
-            </div>
-          </div>
-        </div>
-
-        <div class="row tweet">
-          <img class="avatar" src="assets/avatar.png"></img>
-          <div class="content">
-            <span class="username">@douglascalhoun</span>
-            <span class="timestamp"> - 3h</span>
-            <div>
-              efficiently experienced the big bad decision #ballin
-            </div>
-            <div class="share-icons">
-            </div>
-          </div>
-        </div>
-
-      </div>
-    </div>
+      <div class="tweets"></div>
+    </section>
     <script>
 
       $(document).ready(function(){
