--- a/index.html
+++ b/index.html
@@ -4,12 +4,14 @@
     <script src="moment.min.js"></script>
     <script src="jquery.js"></script>
     <script src="data_generator.js"></script>
+    <script src="managetweets.js"></script>
     <script src="https://use.fontawesome.com/882f9b3b46.js"></script>
     <link rel="stylesheet" href="styles.css">
     <title>Twittler</title>
   </head>
   <body>
 
+    <!-- Main page navigation -->
     <header class="main-nav">
       <nav class="main-nav">
 
@@ -26,162 +28,62 @@
       </nav>
     </header>
 
+    <!-- Section to hold stream of tweets -->
     <section class="stream">
+
+      <!-- Allows user to input message for a new tweet -->
       <div class="row post-tweet">
         <input type="text" class="new-message" name="message" placeholder="What's happening?"></input>
         <a href="#"><i class="fa fa-paper-plane tweet-submit" aria-hidden="true"></i></a>
       </div>
+
+      <!-- Allow user to see new tweets that have been added -->
       <a class="row refresh-tweets hidden">See New Tweets</a>
 
+      <!-- Div to hold tweets -->
       <div class="tweets"></div>
+
     </section>
     <script>
+      // Needs to be accessible by externalized functions
+      var index = 0;
 
       $(document).ready(function(){
-
-        // **************************
-        //   Helpers
-        // **************************
-
-        var postTweet = function(message) {
-          var tweet = {};
-          tweet.user = 'memyselfandi';
-          tweet.message = message;
-          tweet.created_at = new Date();
-          addTweet(tweet);
-          addNewTweets();
-        };
-
-        // Create a tweet jQuery object and return it
-        var makeTweet = function(tweet) {
-          var username = tweet.user;
-          var timestamp = " - " + moment(tweet.created_at).fromNow();
-          var message = tweet.message;
-
-          var $tweet = $('<div></div>');
-          $tweet.addClass('row tweet');
-
-          var $avatar = $('<img></img>');
-          $avatar.addClass('avatar');
-          $avatar.attr('src', 'assets/avatar.png');
-          $tweet.append($avatar);
-
-          var $content = $('<div></div>');
-          $content.addClass('content');
-          $tweet.append($content);
-
-          var $username = $('<a></a>');
-          $username.addClass('username');
-          $username.data('user', username);
-          $username.attr('href', '#');
-          $username.text('@' + username);
-          $content.append($username);
-
-          var $timestamp = $('<span></span>');
-          $timestamp.addClass('timestamp');
-          $timestamp.text(timestamp);
-          $content.append($timestamp);
-
-          var $message = $('<div></div>');
-          $message.text(message);
-          $content.append($message);
-
-          return $tweet;
-        };
-
-        var getStream = function() {
-          var streamName = $('.current-view').data('stream');
-          if (streamName === 'home') {
-            return streams.home;
-          } else {
-            return streams.users[streamName];
-          }
-        };
         
-        // Pull all un-loaded tweets and put them in the DOM
-        var addNewTweets = function() {
-          var stream = getStream();
-
-          while (index < stream.length) {
-
-          var tweet = stream[index];
-          var $tweet = makeTweet(tweet);
-          $tweet.prependTo($tweets);
-
-          index ++;
-          }
-
-          // Remove (*) from title
-          $('title').text('Twittler');
-
-          // Remove "See New Tweets" row from top of page
-          var $newTweets = $('a.refresh-tweets');
-          $newTweets.addClass('hidden');
-        };
-
-        // Check if there are new un-loaded tweets
-        // If yes, add (*) to the title and show the "see new tweets" button
-        var checkForNewTweets = function() {
-          var stream = getStream();
-
-          if(index < stream.length) {
-            // Add (*) to title to indicate new tweets
-            $('title').text('(*) Twittler');
-
-            // Add "See New Tweets" row to top of page
-            var $newTweets = $('a.refresh-tweets');
-            $newTweets.removeClass('hidden');
-          }
-        };
-
-        var clearTweets = function() {
-          $('.tweets').html('');
-          $('a.refresh-tweets').addClass('hidden');
-          index = 0;
-        };
-
-        var switchToStream = function(stream) {
-          clearTweets();
-          $('.current-view').data('stream', stream.toLowerCase());
-          var streamName;
-          if(stream !== 'Home') {
-            streamName = '@' + stream;
-          } else {
-            streamName = stream;
-          }
-          $('.current-view').text(streamName);
-          addNewTweets();
-        }
-
-        // **************************
-        //   Do when DOM is ready
-        // **************************
-        var $tweets = $('.tweets');
-        var index = 0;
+        // Create current user
         streams.users.memyselfandi = [];
         users.push('memyselfandi');
+
+        // Initialize existing tweets
         addNewTweets();
+
         // Check for new tweets every 5 seconds
         setInterval (checkForNewTweets, 5000);
-        // Refresh the tweets when user clicks "See New Tweets"
+
+        // Click: "See New Tweets"
+        // Add any new tweets
         $('.refresh-tweets').on('click', addNewTweets);
 
-        // Switch to user timeline after clicking a username
+        // Click: a username
+        // Switch to that user timeline
         $('.tweets').on('click', '.username', function() {
           var username = $(this).data('user');
           switchToStream(username);
         });
 
-        // Switch to full timeline after clicking Home
+        // Click: "Home"
+        // Switch to full timeline
         $('.home-buttons').on('click', function() {
           switchToStream('Home');
         });
 
+        // Click: Send button
+        // Add tweet with message entered
         $('.tweet-submit').on('click', function (){
           var input = $('.new-message');
           postTweet(input.val());
           input.val('');
-        })
+        });
 
       });
 
